# LearnToRust

./: Cargo.toml  test.http
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260414_163245_create_users.rs  m20260415_104456_create_service_list.rs  m20260415_105052_create_customers.rs  m20260415_105108_create_vehicles.rs  m20260415_105313_create_service_orders.rs  m20260415_105321_create_service_order_items.rs  m20260421_141951_add_token_to_users.rs
src/: main.rs
src/dtos/: api_response.rs  auth_dto.rs  mod.rs
src/entities/: customers.rs  mod.rs  prelude.rs  service_list.rs  service_order_items.rs  service_orders.rs  spareparts.rs  users.rs  vehicles.rs
src/repositories/: user_repository.rs
src/routes/: auth_routes.rs
src/services/: auth_service.rs
