[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
jsonwebtoken = "8"
bcrypt = "0.15"